interface detalhes dos pontos

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1"
+  },
   "name": "desafio-v",
+  "description": "`git clone https://github.com/ItaloGVReis/desafio-V.git`",
   "version": "1.0.0",
-  "description": "git clone https://github.com/ItaloGVReis/desafio-V.git",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "express": "^4.19.2",
-    "mysql": "^2.18.1"
-  }
+  "license": "ISC"
 }
