variaveis ambientes adicionadas

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "`git clone https://github.com/ItaloGVReis/desafio-V.git`",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.11.0"
   }
